--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "ttd-products",
-  "version": "1.0.0",
-  "description": "Test from PT Tiga Token Digital",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "cutmvasya",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "joi": "^17.4.2",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.12.0-alpha.1",
-    "sequelize-cli": "^6.3.0"
-  }
+    "name": "ttd-products",
+    "version": "1.0.0",
+    "description": "Test from PT Tiga Token Digital",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "start": "set NODE_ENV=development&& node index.js",
+        "start-prod": "set NODE_ENV=production&& node index.js"
+    },
+    "author": "cutmvasya",
+    "license": "ISC",
+    "dependencies": {
+        "@joi/date": "^2.1.0",
+        "btoa": "^1.2.1",
+        "cloudinary": "^1.27.1",
+        "cloudinary-core": "^2.12.0",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "joi": "^17.4.2",
+        "multer": "^1.4.3",
+        "multer-storage-cloudinary": "^4.0.0",
+        "path": "^0.12.7",
+        "pg": "^8.7.1",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.12.0-alpha.1",
+        "sequelize-cli": "^6.3.0"
+    }
 }
