--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.12.0-alpha.1",
         "sequelize-cli": "^6.3.0"
+    },
+    "devDependencies": {
+        "jest": "^27.3.1",
+        "supertest": "^6.1.6"
     }
 }
